2011-03-18  Per Bothner  <per@bothner.com>

	* RunTestScript.java: New class, for simple one-file test cases.
	* Makefile.am: Update accordingly.

2010-11-29  Per Bothner  <per@bothner.com>

	* PreProcess.java: Add "use:javax.lang.model" as a separate feature
	name, implied by JAVA6.

2010-08-28  Per Bothner  <per@bothner.com>

	* PreProcess.java (version_features): Add "java7".

2010-08-07  Per Bothner  <per@bothner.com>

	* AbstractHashTable.java (clear):  Fix thinko.

2010-07-23  Per Bothner  <per@bothner.com>

	* AbstractHashTable.java (<init>): New default constructor.
	(DEFAULT_INITIAL_SIZE): Moved from GeneralHashTable.
	* GeneralHashTable.java (<init>): Default constructor
	just calls super default constructor.

2010-04-18  Per Bothner  <per@bothner.com>

	* PreProcess.java: The use:com.sun.net.httpserver option is now
	passed in by the top-level Makefile.

	* AbstractHashTable.java: Fix comment to it is PreProcess-safe.

2010-04-10  Per Bothner  <per@bothner.com>

	* PreProcess.java: Add support for "java6compat5" version.
	Add JAVA6COMPAT5 pre-processor macro.

2010-04-08  Per Bothner  <per@bothner.com>

	* GeneralHashTable.java (getNode): Fix parameter inconsistency
	introduced by recent changes to add java.util.Map-compatibility.
	Fixes bug reported by Yaroslav Kavenchuk <kavenchuk@jenty.by>.

2010-04-05  Per Bothner  <per@bothner.com>

	* AbstractWeakHashTable.java (put): Restore (and update) custom
	implementation that was incorrectly removed by previous change.

2010-04-04  Per Bothner  <per@bothner.com>

	Change AbstractHashTable to implement java.util.Map.
	* AbstractHashTable.java: Change to extend java.util.AbstractMap.
	(getEntryKey, getEntryValue, setEntryValue): Remove - just use
	the correspondong Map.Entry methods.
	(hash, matches, get, getNode, remove): Change type of key parameter
	to be Object rather than K, to be compatible with java.util.Map.
	(class AbstractEntrySet): New helper class, for entrySet method/